@@ -93,6 +93,13 @@ public class StandaloneScriptTestCase extends ScriptTestCase {
         Assert.assertNotNull("The process is null and may have failed to start.", script);
         Assert.assertTrue("The process is not running and should be", script.isAlive());
 
+        final var stdout = script.getStdoutAsString();
+        if (supportsEnhancedSecurityManager() && env.containsKey("SECMGR")) {
+            Assert.assertTrue("Expected to find -Djava.security.manager=allow in the JVM parameters.", stdout.contains("-Djava.security.manager=allow"));
+        } else {
+            Assert.assertFalse("Did not expect to find -Djava.security.manager=allow in the JVM parameters.", stdout.contains("-Djava.security.manager=allow"));
+        }
+
         if (env.containsKey("MODULE_OPTS")) {
             final List<JsonObject> lines = ServerHelper.readLogFileFromModel("json.log");
             Assert.assertEquals("Expected 2 lines found " + lines.size(), 2, lines.size());
